# CMake-Nix

./: .gitignore  .gitignore.orig  .gitmodules  ADVANCED_DEPS_RATIONALE.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_FINDINGS.md  COMPILE_COMMANDS_RATIONALE.md  HISTORICAL_CONTEXT.md  LESSONS_LEARNED.md  MIGRATION_STORIES.md  PRD.md  README.md  TODO_NEW_FINDINGS.md  UNITY_BUILD_RATIONALE.md  UNSUPPORTED_FEATURES.md  all_tests.txt  bootstrap  bootstrap-nix  cmake_output.txt  default.nix  dev_log_findings.md  dev_output.txt  dev_output_current.txt  dev_output_final.txt  dev_output_latest.txt  dev_output_new.txt  feature_detect.prd.md  hardcoded_strings_review.md  included_tests.txt  justfile  justfile_tests.txt  maintainability_review.md  nix_generator_docs.md  plan.md  run-simple-static-analysis.sh  run-static-analysis.sh  shell.nix  test_cpp_simple.nix  (+12 more)
Modules/: CMakeDetermineCompilerABI.cmake  CMakeNixFindMake.cmake  CMakeTestCCompiler.cmake  CMakeTestCXXCompiler.cmake
Source/: CMakeLists.txt  PERFORMANCE.md  THREAD_SAFETY.md  cmCoreTryCompile.cxx  cmGeneratorExpressionNode.cxx  cmGlobalNixGenerator.cxx  cmGlobalNixGenerator.h  cmGlobalNixGenerator_ParallelTryCompile.cxx  cmGlobalNixMultiGenerator.cxx  cmGlobalNixMultiGenerator.h  cmLocalNixGenerator.cxx  cmLocalNixGenerator.h  cmNixBuildConfiguration.cxx  cmNixBuildConfiguration.h  cmNixCacheManager.cxx  cmNixCacheManager.h  cmNixCompilerResolver.cxx  cmNixCompilerResolver.h  cmNixConstants.h  cmNixCustomCommandGenerator.cxx  cmNixCustomCommandGenerator.h  cmNixCustomCommandHandler.cxx  cmNixCustomCommandHandler.h  cmNixDependencyGraph.cxx  cmNixDependencyGraph.h  cmNixDerivationWriter.cxx  cmNixDerivationWriter.h  cmNixPathUtils.cxx  (+17 more)
selfhost-test/: CMakeLists.txt  default.nix  demo_utils.cpp  main.cpp  simple_demo.cpp
test_abi_debug/: CMakeLists.txt  justfile  main.c
test_abi_debug/build_nix/: default.nix
test_circular_deps/: CMakeLists.txt  justfile  lib1.cpp  lib2.cpp  lib3.cpp  libA.cpp  libB.cpp  libX.cpp  libY.cpp  libZ.cpp  main.cpp
test_cmake_self_host/: CMakeLists.txt  justfile  test_main.cxx
test_cmake_self_host/build-nix/: default.nix
test_compile_language_expr/: CMakeLists.txt  justfile  main.c  utils.cpp
test_compiler_detection/: CMakeLists.txt  helper.cpp  justfile  main.c  main.cpp
test_complex_build/: CMakeLists.txt  helper.c  justfile  main.cpp  utils.cpp
test_complex_build/include/: utils.hpp
test_complex_build/shared/: api.c  impl.cpp
test_complex_build/test_flag_parsing/: CMakeLists.txt  default.nix  main.cpp
test_complex_build/test_flag_parsing2/: CMakeLists.txt  default.nix
test_complex_dependencies/: CMakeLists.txt  base_utils.cpp  direct_main.cpp  engine_lib.cpp  graphics_lib.cpp  justfile  main.cpp  math_lib.cpp
test_complex_dependencies/include/: base_utils.hpp  engine_lib.hpp  graphics_lib.hpp  math_lib.hpp
test_cross_compile/: CMakeLists.txt  justfile
test_cross_compile/src/: main.c
test_custom_command_complex/: CMakeLists.txt  generated_template.c.in  main_complex.c
test_deep_dependencies/: CMakeLists.txt  cmake_debug.txt  generate_deps.py  justfile  lib_L0_N0.cpp  lib_L0_N1.cpp  lib_L0_N2.cpp  lib_L0_N3.cpp  lib_L0_N4.cpp  lib_L1_N0.cpp  lib_L1_N1.cpp  lib_L1_N2.cpp  lib_L1_N3.cpp  lib_L1_N4.cpp  lib_L2_N0.cpp  lib_L2_N1.cpp  lib_L2_N2.cpp  lib_L2_N3.cpp  lib_L2_N4.cpp  lib_L3_N0.cpp  lib_L3_N1.cpp  lib_L3_N2.cpp  lib_L3_N3.cpp  lib_L3_N4.cpp  lib_L4_N0.cpp  lib_L4_N1.cpp  lib_L4_N2.cpp  lib_L4_N3.cpp  lib_L4_N4.cpp  lib_L5_N0.cpp  lib_L5_N1.cpp  lib_L5_N2.cpp  lib_L5_N3.cpp  lib_L5_N4.cpp  lib_L6_N0.cpp  lib_L6_N1.cpp  lib_L6_N2.cpp  lib_L6_N3.cpp  lib_L6_N4.cpp  lib_L7_N0.cpp  (+15 more)
test_error_conditions/: CMakeLists.txt  circular_a.c  circular_b.c  justfile  test_main.c
test_error_recovery/: CMakeLists.txt  justfile
test_error_recovery/src/: circular_a.c  circular_b.c  missing_header.c  syntax_error.c  valid.c  valid2.c
test_explicit_headers/: CMakeLists.txt  justfile
test_explicit_headers/src/: entity.c  main.c  memory.c
test_explicit_sources/: CMakeLists.txt  README.md  default_explicit.nix  justfile  main.c  shell.nix
test_explicit_sources/utils/: helper.c
test_export_import/: CMakeLists.txt  ExportImportTestConfig.cmake.in  justfile
test_export_import/src/: main.cpp  mylib.cpp
test_external_config_deps/: CMakeLists.txt  config.h.in  external_config.h.in  justfile  main.c
test_external_library/: CMakeLists.txt  justfile  main.c  pkg_m.nix
test_external_tools/: CMakeLists.txt  justfile  main.cpp  pkg_fmt.nix
test_feature_detection/: CMakeLists.txt  comprehensive_main.cpp  justfile  main.cpp
test_feature_detection/test_feature_detection_comprehensive/: CMakeLists.txt
test_file_edge_cases/: CMakeLists.txt  MixedCase.cpp  justfile  source with spaces.cpp  symlinked_source.cpp  test_spaces.nix  this_is_a_very_long_filename_that_might_cause_issues_with_some_build_systems_but_should_work_fine.cpp  unicode_文件.cpp
test_find_package/: CMakeLists.txt  compress.c  justfile  opengl.c  pkg_OpenGL.nix  pkg_ZLIB.nix  shell.nix  threaded.c
test_fortran_language/: CMakeLists.txt  fortran_calc.f90  hello.f90  justfile  mixed_main.c
test_generator_expressions/: CMakeLists.txt  justfile  pkg_glibc.nix  result-2  result-3  result-4  shell.nix
test_generator_expressions/src/: debug_utils.cpp  default_utils.cpp  main.cpp  mylib.cpp  release_utils.cpp
test_headers/: CMakeLists.txt  justfile
test_headers/src/: main.c
test_implicit_headers/: CMakeLists.txt  justfile
test_implicit_headers/src/: calculator.c  logger.c  main.c
test_install_rules/: CMakeLists.txt  justfile  lib.c  main.c  static.c
test_interface_library/: CMakeLists.txt  justfile  main.c
test_json_library/: CMakeLists.txt  justfile
test_json_library/json/: CMakeLists.txt
test_json_library/json/include/json/: json.h
test_json_library/json/src/: json_parser.cpp  json_value.cpp  json_writer.cpp
test_json_library/src/: main.cpp
test_mixed_language/: CMakeLists.txt  c_interface.c  c_math.c  cpp_utils.cpp  cpp_utils.hpp  justfile  main.cpp
(+709 files in other folders)
